feat: 重构配置管理
1. 管理员端加入系统配置管理方便修改常用配置

--- a/docker-cogniloop/Dockerfile
+++ b/docker-cogniloop/Dockerfile
@@ -32,6 +32,7 @@ COPY pyproject.toml ./
 RUN uv pip install --system .
 
 COPY backend/ /app/backend/
+COPY scripts/ /app/scripts/
 
 COPY --from=frontend-builder /frontend/dist /app/static
 
