--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,8 @@
-# 数据库连接 URL
-DATABASE_URL=postgresql+asyncpg://cogniloop:your_password@localhost:5432/cogniloop_db
-
-# 数据库连接池配置
-DB_POOL_MIN_SIZE=5
-DB_POOL_MAX_SIZE=20
-DB_POOL_MAX_QUERIES=50000
-DB_POOL_MAX_INACTIVE_TIME=300
-
-# OpenAI API 配置
-OPENAI_API_KEY=sk-your-api-key-here
-OPENAI_BASE_URL=https://api.openai.com/v1
-OPENAI_MODEL=gpt-4o-mini
-
-# Embedding 模型配置
-EMBEDDING_API_KEY=
-EMBEDDING_BASE_URL=
-EMBEDDING_MODEL=text-embedding-3-small
-EMBEDDING_DIMS=1536
-
 # JWT 配置
 # 生产环境建议使用：openssl rand -hex 32 生成
 JWT_SECRET_KEY=your-jwt-secret-key-change-in-production
 JWT_ALGORITHM=HS256
 JWT_ACCESS_TOKEN_EXPIRE_MINUTES=1440
 
-# 应用配置
-UPLOAD_DIR=./uploads
-QUESTION_SETS_DIR=./question_sets
-APP_PORT=8000
+# 日志配置
 LOG_LEVEL=INFO
