feat: 添加验证码功能
1. 在项目中引入验证码服务，生成和验证图形验证码。
2. 更新相关模型和数据库迁移，新增 captcha_store 表以存储验证码信息。
3. 修改用户注册和登录接口，增加验证码验证逻辑。
4. 前端页面更新，添加验证码输入框和获取验证码功能。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "pydantic-settings>=2.6.0",
     "email-validator>=2.0.0",
     "httpx>=0.28.0",
+    "captcha>=0.6.0",
 ]
 
 [project.optional-dependencies]
