fix: 修复系统设置保存使用陈旧表单值并优化配置缓存与构建
1. 系统设置页：使用 formValuesRef 同步表单值，getChangedConfigs 改为接收当前表单值参数，避免 handleSave 闭包捕获陈旧的 formValues 导致保存漏变更。
2. 配置服务：更新配置后不再全量 load_config_cache，改为用已提交的新值直接合并更新 _config_cache，减少数据库查询。
3. 前端：新增 frontend/src/lib/utils.ts，.gitignore 增加 !frontend/src/lib/ 以在忽略 lib/ 的前提下保留该目录。
4. Docker：设置 NODE_OPTIONS 限制内存，npm ci 增加 --no-audit --no-fund，使用 npx vite build 构建前端，移除 COPY scripts/。
5. docs：README 增加在线演示链接。

--- a/docker-cogniloop/Dockerfile
+++ b/docker-cogniloop/Dockerfile
@@ -3,13 +3,15 @@ FROM node:20-alpine AS frontend-builder
 
 WORKDIR /frontend
 
+ENV NODE_OPTIONS="--max-old-space-size=512"
+
 COPY frontend/package.json frontend/package-lock.json* ./
 
-RUN npm ci --silent
+RUN npm ci --silent --no-audit --no-fund
 
 COPY frontend/ ./
 
-RUN npm run build
+RUN npx vite build
 
 # 构建后端
 FROM python:3.11-slim
@@ -32,7 +34,6 @@ COPY pyproject.toml ./
 RUN uv pip install --system .
 
 COPY backend/ /app/backend/
-COPY scripts/ /app/scripts/
 
 COPY --from=frontend-builder /frontend/dist /app/static
 
