fix: 替换 Node 基础镜像为 slim 解决 ARM64 下的构建崩溃
1. 弃用 node:20-alpine，改用兼容性更好的 node:20-bookworm-slim (glibc)
2. 移除写死的 NODE_OPTIONS 内存限制

--- a/docker-cogniloop/Dockerfile
+++ b/docker-cogniloop/Dockerfile
@@ -1,9 +1,7 @@
 # 构建前端
-FROM node:20-alpine AS frontend-builder
+FROM node:20-bookworm-slim AS frontend-builder
 
 WORKDIR /frontend
-
-ENV NODE_OPTIONS="--max-old-space-size=512"
 
 COPY frontend/package.json frontend/package-lock.json* ./
 
