feat: 添加仿高考组卷相关功能和 API
1. 新增数据库表以支持仿高考组卷功能，包括教师授权、历年试卷、试题、组卷任务和试题生成过程日志。
2. 实现仿高考组卷 API 端点，支持获取可用卷型、科目列表、发起组卷任务及任务管理。
3. 更新依赖项和许可证信息，确保项目合规性和功能完整性。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "cogniloop"
 version = "0.1.0"
 description = "基于 LangGraph 的智能助教系统"
 readme = "README.md"
+license = "AGPL-3.0-only"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.115.0",
